Fixed login title issue
fixed an issue where the login title page was too big to fit in the container on one line

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -296,7 +296,7 @@ th:hover {
   width: 100%;
 }
 
-.form-container h3 {
+.form-container h4 {
   margin-bottom: 20px;
   text-align: center;
 }
